style(getting-better-tutorial): adding more explanation and formatting the existing tutorials

--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -35,13 +35,15 @@
    "id": "fc73c599",
    "metadata": {},
    "source": [
-    "### Substance objects instantiation\n",
-    "\n",
-    "A fully defined Substance contains a lot of information. Specific attributes definition will be\n",
-    "required for the reactors, described in each reactor documentation. For example, an adiabatic \n",
-    "reactor will require that substances define a heat capacity function, on the other hand, when using isothermic reactors this won't be necessary. \n",
-    "Substance has the from_thermo_data_base alternative construction method. \n",
-    "Substances objects can be saved as pickle files with the method ```to_pickle ```. substances can be loaded from a pickle file with the method ```from_pickle ```\n",
+    "### Definition of substance objects\n",
+    "A fully defined Substance contains a lot of information. Specific attributes \n",
+    "definition will be required for the reactors, described in each reactor \n",
+    "documentation. For example, an adiabatic reactor will require that substances \n",
+    "define a heat capacity function, on the other hand, when using isothermic \n",
+    "reactors this won't be necessary. Substance has the from_thermo_data_base \n",
+    "alternative construction method. Substances objects can be saved as pickle \n",
+    "files with the method ```to_pickle ```. substances can be loaded from a pickle \n",
+    "file with the method ```from_pickle ```.\n",
     "\n",
     "\n",
     "The minimum necessary information for each substance will be \n",
@@ -50,7 +52,7 @@
     "\n",
     "```python\n",
     "rd.Substance(  \n",
-    "    name: str = None,  \n",
+    "    name: str,  \n",
     "    molecular_weight: float = None,  \n",
     "    normal_boiling_point: float = None,  \n",
     "    normal_melting_point: float = None,  \n",
@@ -106,11 +108,20 @@
     "    - heat_capacity_gas_dt_integral\n",
     "\n",
     "The **Temperature and pressure dependent properties** must be specified as \n",
-    "python functions of temperature, or both temperature and pressure, as \n",
-    "corresponds. \n",
-    "**Properties calculated by integration** must be specified as python functions\n",
-    "of two temperatures and pressure to return the definite integral between \n",
-    "temperature1 and temperature2.\n",
+    "`Python` functions of temperature and pressure.\n",
+    "\n",
+    "**Properties calculated by integration** must be specified as `Python` \n",
+    "functions of two temperatures and pressure to return the definite integral \n",
+    "between temperature1 and temperature2."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "26e5c8ad",
+   "metadata": {},
+   "source": [
+    "### Instantiate a substance\n",
     "\n",
     "For this tutorial, a water Substance object is defined with some \n",
     "example properties.\n",
@@ -131,20 +142,11 @@
    "outputs": [],
    "source": [
     "# Defining functions for molar liquid volume and liquid heat capacity.\n",
-    "\n",
-    "\n",
-    "def water_volume_liquid_tp(temperature: float, pressure: float) -> float:\n",
+    "def water_volume_liquid_tp(temperature, pressure):\n",
     "    \"\"\"User defined function for liquid molar volume. [m^3/mol]\n",
     "\n",
     "    Even if pressure is not used in the molar volume function it must be\n",
     "    specified as an argument.\n",
-    "\n",
-    "    The termination of the Substance argument is a visual help to remember the\n",
-    "    arguments needed.\n",
-    "\n",
-    "    xxx_t: function(temperature)\n",
-    "\n",
-    "    xxx_tp: function(temperature, pressure)\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -169,7 +171,7 @@
     "    return molar_vol\n",
     "\n",
     "\n",
-    "def water_heat_capacity_liquid_t(temperature: float, pressure: float) -> float:\n",
+    "def water_heat_capacity_liquid_t(temperature, pressure):\n",
     "    \"\"\"User defined function for liquid heat capacity. [J/mol/K]\n",
     "\n",
     "    Parameters\n",
@@ -188,14 +190,23 @@
     "    c4 = -0.014116\n",
     "    c5 = 9.3701e-06\n",
     "\n",
-    "    cp_liquid = (\n",
-    "        c1\n",
-    "        + c2 * temperature\n",
-    "        + c3 * temperature**2\n",
-    "        + c4 * temperature**3\n",
-    "        + c5 * temperature**4\n",
-    "    )\n",
-    "    return cp_liquid / 1000"
+    "    t = temperature\n",
+    "    cp_liquid = (c1 + c2 * t + c3 * t**2 + c4 * t**3 + c5 * t**4) / 1000\n",
+    "    \n",
+    "    return cp_liquid"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "99aca66b",
+   "metadata": {},
+   "source": [
+    "Now we instantiate a water Substance object in the variable water_byhand.\n",
+    "It's important and mandatory to **give a name to your substance**. You can\n",
+    "use whatever string you want, so use something easy to remember. The name of\n",
+    "the substance will be important to define border condition for reactors and to\n",
+    "read the simulation results of the reactors."
    ]
   },
   {
@@ -216,7 +227,6 @@
    ],
    "source": [
     "# Defining water Substance by hand\n",
-    "\n",
     "water_byhand = rd.Substance(\n",
     "    name=\"water\",\n",
     "    molecular_weight=18.015,\n",
@@ -225,7 +235,6 @@
     ")\n",
     "\n",
     "# Calling substance methods\n",
-    "\n",
     "print(water_byhand.molecular_weight)\n",
     "print(water_byhand.volume_liquid(298.15, 101325))\n",
     "print(water_byhand.heat_capacity_liquid(298.15, 101325))"
@@ -234,15 +243,224 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "5566a0e3",
+   "id": "3d5dbae3",
    "metadata": {},
    "source": [
-    "For convinence the object subject create by hand could be save into a file for its posterior use"
+    "### Broadcasting\n",
+    "\n",
+    "It's important that the temperature-pressure functions of the substances\n",
+    "follows the \n",
+    "[broadcasting](https://numpy.org/doc/stable/user/basics.broadcasting.html)\n",
+    "rules of `Numpy`. Reactors' behavior ruled by differential equations will\n",
+    "evaluate the substances function with `Numpy` arrays and will expect an array \n",
+    "as a return."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "id": "0257757a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.80074082e-05, 1.87788490e-05, 1.77064797e-05, 1.31346326e-05])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperatures = np.array([300, 400, 500, 600])\n",
+    "pressures = np.array([100_000, 200_000, 300_000, 400_000])\n",
+    "\n",
+    "water_byhand.volume_liquid(temperatures, pressures)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b4aca87c",
+   "metadata": {},
+   "source": [
+    "#### Defining a constant property\n",
+    "\n",
+    "For example, if you want to define a constant molar volume you can use the\n",
+    "`numpy.full()` function as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "25253aa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def volume(temperature, pressure):\n",
+    "    v = 1.8e-5\n",
+    "    return np.full(len(temperature), v)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "da6a8158",
+   "metadata": {},
+   "source": [
+    "This function will return a constant volume value for all temperatures and \n",
+    "pressures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "750bed60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.8e-05, 1.8e-05, 1.8e-05, 1.8e-05])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperatures = np.array([300, 400, 500, 600])\n",
+    "pressures = np.array([100_000, 200_000, 300_000, 400_000])\n",
+    "\n",
+    "volume(temperatures, pressures)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "24f18788",
+   "metadata": {},
+   "source": [
+    "Also to assure the broadcasting rules in the functions, you can turn to `True`\n",
+    "the `vectorize_functions` parameter in the Substance object instantiation. For \n",
+    "example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e9385436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def volume_not_broadcast(temperature, pressure):\n",
+    "    return 1.8e-5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5188557a",
+   "metadata": {},
+   "source": [
+    "The function `volume_not_broadcast` will not follow the broadcasting rules and \n",
+    "will return a unique value for an array evaluation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "19aef412",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8e-05"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperatures = np.array([300, 400, 500, 600])\n",
+    "pressures = np.array([100_000, 200_000, 300_000, 400_000])\n",
+    "\n",
+    "volume_not_broadcast(temperatures, pressures)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "91a709b3",
+   "metadata": {},
+   "source": [
+    "We can still define a substance with this volume function, but enabling the \n",
+    "`vectorize_functions` parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e05ad9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.8e-05, 1.8e-05, 1.8e-05, 1.8e-05])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_substance = rd.Substance(\n",
+    "    name=\"example\",\n",
+    "    volume_liquid=volume_not_broadcast,\n",
+    "    vectorize_functions=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "temperatures = np.array([300, 400, 500, 600])\n",
+    "pressures = np.array([100_000, 200_000, 300_000, 400_000])\n",
+    "\n",
+    "example_substance.volume_liquid(temperatures, pressures)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7e651fe2",
+   "metadata": {},
+   "source": [
+    "The function is vectorized via `numpy.vectorize()`, leading to a worse\n",
+    "calculation performance."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5566a0e3",
+   "metadata": {},
+   "source": [
+    "### Storing a substance\n",
+    "\n",
+    "For convinence the object subject create by hand could be save into a file for \n",
+    "its posterior use. This file y generate thanks to the \n",
+    "[`dill`](https://github.com/uqfoundation/dill) library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "32406b73",
    "metadata": {},
    "outputs": [
@@ -291,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -315,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -325,7 +543,7 @@
        "Text(0.5, 0, 'Temperature [K]')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -371,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
