style(full-kinetic-tutorial): tutorial for kinetic objects

--- a/docs/source/tutorial/stationary_pfr.ipynb
+++ b/docs/source/tutorial/stationary_pfr.ipynb
@@ -288,6 +288,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "CHECK THE OTHER POSIBBLE MASS, ENERGY AND PRESSURE BALANCES IN THE\n",
+    "ReactorD API's documentation\n",
+    "\n",
     "__Set and Simulate the reactor__"
    ]
   },
