--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0257757a",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "array([1.80074082e-05, 1.87788490e-05, 1.77064797e-05, 1.31346326e-05])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "25253aa2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def volume(temperature, pressure):\n",
     "    v = 1.8e-5\n",
-    "    return np.full(len(temperature), v)"
+    "    return np.full(np.size(temperature), v)"
    ]
   },
   {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "750bed60",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "array([1.8e-05, 1.8e-05, 1.8e-05, 1.8e-05])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "e9385436",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "19aef412",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "1.8e-05"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "e05ad9cb",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "array([1.8e-05, 1.8e-05, 1.8e-05, 1.8e-05])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "32406b73",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "Text(0.5, 0, 'Temperature [K]')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
