style(typos-in-tutorial): typos in kinetic tutorial fixed

--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "## Kinetic objects\n",
-    "The Kinetic class is responsible for calculating reaction rates and reaction enthalpies when solving the reactor equations."
+    "The Kinetic class is responsible for calculating reaction rates and reaction \n",
+    "enthalpies when solving the reactor equations."
    ]
   },
   {
@@ -25,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use an example to illustrate its functionality. First, we will define two rate constants and the volume of the reactor."
+    "We will use an example to illustrate its functionality. First, we define\n",
+    "the kinetic constants. Reaction 1 is reversible and has two kinetic constant\n",
+    "independents of temperature and reaction 2 is irreversible, so the \n",
+    "pre-exponential factor and $\\frac{E}{R}$ of the Arrhenius equations are given."
    ]
   },
   {
@@ -50,7 +54,8 @@
    "source": [
     "#### Reaction rate\n",
     "\n",
-    "Next, we set the reaction rates, which are defined by python function with the format:\n",
+    "Next, we set the reaction rates, which are defined by `Python` function with \n",
+    "the format:\n",
     "\n",
     "```python\n",
     "def reaction_rate(\n",
@@ -68,7 +73,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rate laws are defined as functions. for example, given the hypothetical reactions:\n",
+    "The rate laws are defined as functions. for example, given the hypothetical \n",
+    "reactions:\n",
+    "\n",
     "$$\n",
     "2A + B \\leftrightarrow C\n",
     "$$\n",
@@ -78,18 +85,18 @@
     "$$\n",
     "\n",
     "Where the first one is a reversible reaction and the second is irreversible, \n",
-    "and both are elemental and function of the substrates concentrations [mol/m³].\n",
-    "Also we have the data that, for the firs reaction, the rate of consumption of\n",
-    "A is:\n",
+    "and both are elemental and function of the concentrations of the substrates \n",
+    "[mol/m³]. Also, we have the data that, for the first reaction, the rate of \n",
+    "consumption of A is:\n",
     "\n",
     "$$r_A = k_d C_A^2 C_B - k_i C_C$$\n",
     "\n",
-    "And the rate of consumption of C en the second reaction is:\n",
+    "And the rate of consumption of C in the second reaction is:\n",
     "\n",
-    "$$r_2 = a_2 e^{-e_2 / T} C_C$$\n",
+    "$$r_2 = a_2 e^{\\frac{-e_2}{T}} C_C$$\n",
     "\n",
     "Since we have the reaction rate for the consumption of A in the first reaction.\n",
-    "We have to fix the stoichiometry to 1 for A:\n",
+    "We have to fix the stoichiometric coefficient of A to 1:\n",
     "\n",
     "$$\n",
     "A + \\frac{1}{2} B \\leftrightarrow \\frac{1}{2} C\n",
@@ -100,9 +107,9 @@
     "$$\n",
     "\n",
     "Reaction rates are defined positively. ReactorD will automatically detect, for\n",
-    "a substrate, if the reaction is positive or negative. Also, in the case of \n",
-    "substrate C, would take into acount the production of C by reaction 1 and the\n",
-    "consuption of C by reaction 2."
+    "a substrate, if its stoichiometric coefficient is positive or negative. Also, \n",
+    "in the case of substrate C, would take into account the production of C by \n",
+    "reaction 1 and the consumption of C by reaction 2."
    ]
   },
   {
@@ -135,10 +142,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that both function follows the [broadcasting](https://numpy.org/doc/stable/user/basics.broadcasting.html) rules of `Numpy`, this is\n",
-    "mandatory.\n",
+    "Note that both functions follow the \n",
+    "[broadcasting](https://numpy.org/doc/stable/user/basics.broadcasting.html)\n",
+    "rules of `Numpy`. This is mandatory.\n",
     "\n",
-    "Now we must define out substances. Imagine that all the substances have the \n",
+    "Now we must define our substances. Imagine that all the substances have the \n",
     "same molar volume and it's constant with temperature and pressure:"
    ]
   },
@@ -159,7 +167,7 @@
    "source": [
     "Substance objects are instantiated:\n",
     "\n",
-    "NOTE THAT THE NAME OF THE SUBSTANCES IS THE SAME USED IN THE REACITON RATES!!!!"
+    "NOTE THAT THE NAME OF THE SUBSTANCES IS THE SAME USED IN THE REACTION RATES!!!!"
    ]
   },
   {
@@ -179,7 +187,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After that, the mixture of the substances is instantiated. In this case, we create an IdealSolution object:"
+    "After that, the mixture of the substances is instantiated. In this case, we \n",
+    "create an IdealSolution object:"
    ]
   },
   {
@@ -221,14 +230,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What happend there?\n",
+    "What happened there?\n",
     "\n",
-    "Kinetic object recieves:\n",
-    " * A mix object: it uses the mix object to evaluate the properties of the mixture\n",
-    " In this case, molar volume, so concentrations.\n",
+    "The kinetic object receives:\n",
+    " * A mix object: it uses the mix object to evaluate the properties of the \n",
+    " mixture. In this case, molar volume, to calculate concentrations.\n",
     "\n",
     " * A reactions dictionary:\n",
-    "    In this paramater we set the stoichiometry of our reactive system. The\n",
+    "    In this parameter, we set the stoichiometry of our reactive system. The\n",
     "    format of the dictionary is:\n",
     "\n",
     "    ```python\n",
@@ -238,7 +247,7 @@
     "    The main keys of the dictionary are the reaction names and are merely \n",
     "    aesthetic.\n",
     "\n",
-    "    Then, in the interior dictionaries we have the `\"eq\"` key were we define \n",
+    "    Then, in the interior dictionaries we have the `\"eq\"` key where we define \n",
     "    the stoichiometry of the reaction by algebraic operation with the \n",
     "    substance objects previously defined.\n",
     "\n",
@@ -252,11 +261,11 @@
     "    pressure as the mixture object specifies. In this case, our reaction\n",
     "    is isothermic.\n",
     "\n",
-    "    Since we have two reactions in our system, we specifies two reaction_dict.\n",
+    "    Since we have two reactions in our system, we specify two reaction_dict.\n",
     "\n",
     "* Kinetic constants:\n",
     "    we specify the kinetic constant values with a dictionary. Note that the\n",
-    "    kinetic constants have the same name that it were used in the reaction\n",
+    "    kinetic constants have the same name that they were used in the reaction\n",
     "    rate functions previously defined.\n",
     "\n",
     "* Rate argument:\n",
@@ -266,11 +275,11 @@
     "    - Concentration $[\\frac {mol} {m^3}]$  \n",
     "    - Partial pressure [Pa]\n",
     "\n",
-    "    In this case, our reaction rates are function of the concentration of the\n",
-    "    substates, so we choose concentration.\n",
+    "    In this case, our reaction rates are a function of the concentration of the\n",
+    "    substrates, so we choose \"concentration\".\n",
     "\n",
     "\n",
-    "Now we can visualy represent the kinetic object:"
+    "Now we can visually represent the kinetic object:"
    ]
   },
   {
@@ -312,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also we can obtain the stoichiometric matrix of our system:"
+    "Also, we can obtain the stoichiometric matrix of our system:"
    ]
   },
   {
@@ -341,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is why the reaction rates are defined positively. ReactorD will aply that\n",
+    "This is why the reaction rates are defined positively. ReactorD will apply that\n",
     "stoichiometry matrix to our reaction rates."
    ]
   },
@@ -352,7 +361,7 @@
    "source": [
     "### Evaluating the kinetic\n",
     "\n",
-    "now we can evaluate both reaction rates at once, but we must specifie a mole\n",
+    "now we can evaluate both reaction rates at once, but we must specify a mole\n",
     "composition for our substances:"
    ]
   },
@@ -392,7 +401,7 @@
     "\n",
     "To define a constant reaction enthalpy for our reaction we can set that the\n",
     "first one is endothermic and has a value of 10,000 $\\frac{J}{mol_A}$.\n",
-    "The second one is exothermic and the value of the reaciton enthalpy is\n",
+    "The second one is exothermic and the value of the reaction enthalpy is\n",
     "-20,000 $\\frac{J}{mol_C}$."
    ]
   },
@@ -418,10 +427,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We must initiate the reaciton enthalpy of our kinetic. This will be automatically\n",
-    "done for the reactors that needs this value. This features prevents that\n",
-    "the reactor search for values like heat capacities maybe not defined by the user\n",
-    "because, for example, the user want's to simulate an isothermic reactor and \n",
+    "We must initiate the reaction enthalpy of our kinetic. This will be automatically\n",
+    "done for the reactors that need this value. This feature prevents the reactor \n",
+    "search for values like heat capacities maybe not be defined by the user\n",
+    "because, for example, the user wants to simulate an isothermic reactor and \n",
     "the heat capacities are not needed."
    ]
   },
@@ -491,7 +500,7 @@
     "\n",
     "Now a full example with variable reaction enthalpies.\n",
     "\n",
-    "Consider the combustion of methane and ethane in gas pahse with nitrogen as\n",
+    "Consider the combustion of methane and ethane, in gas phase, with nitrogen as\n",
     "inert.\n",
     "\n",
     "$$\n",
@@ -501,10 +510,9 @@
     "$$\n",
     "C_2H_6 + \\frac{7}{2} O_2 \\rightarrow 2 CO_2 + 3 H_2O \n",
     "$$\n",
+    "For example, are used toy reaction rates.\n",
     "\n",
-    "For the example are used toy reaction rates.\n",
-    "\n",
-    "For the calculation of the reaction enthalpies are necessary the standard \n",
+    "For the calculation of the reaction, enthalpies are necessary the standard \n",
     "ideal gas formation enthalpies of all the substrates, and the ideal gas \n",
     "heat capacities. For our luck, we can take them from the thermo library.\n"
    ]
@@ -527,7 +535,7 @@
     "n2 = rd.Substance.from_thermo_database(\"n2\", \"nitrogen\")\n",
     "\n",
     "# =============================================================================\n",
-    "# Mixture: now a ideal gas\n",
+    "# Mixture\n",
     "# =============================================================================\n",
     "mix = rd.mix.IdealGas([ch4, o2, co2, h2o, c2h6, n2])\n",
     "\n",
@@ -565,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +583,7 @@
        "       [ 0. , -3.5,  2. ,  3. , -1. ,  0. ]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +604,7 @@
        "       [2.73901811e-05, 1.60170955e-05, 8.32365845e-06]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,13 +615,14 @@
     "        [10, 15, 16], # ch4 moles\n",
     "        [20, 10, 16], # o2 moles\n",
     "        [50, 20, 30], # co2 moles\n",
-    "        [0, 20, 15], # h2o moles\n",
+    "        [0, 20, 15],  # h2o moles\n",
     "        [40, 20, 30], # c2h6 moles\n",
-    "        [10, 0, 30] # n2 moles\n",
+    "        [10, 0, 30]   # n2 moles\n",
     "    ]\n",
     ")\n",
     "\n",
     "mole_fractions = mix.mole_fractions(moles)\n",
+    "\n",
     "temperatures = np.array([500, 1000, 2000])\n",
     "pressures = np.array([100_000, 200_000, 300_000])\n",
     "\n",
@@ -623,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +642,7 @@
        "       [-1425727.62523699, -1427790.25945566, -1443262.71596654]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
